--- a/index.html
+++ b/index.html
@@ -22,4 +22,8 @@
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.4/build/spline-viewer.js"></script>
     <spline-viewer url="https://prod.spline.design/5-AlCj24-E5CvH6A/scene.splinecode"></spline-viewer>
 </body>
+    <audio controls autoplay>
+    <source src="https://res.cloudinary.com/do9m2khzs/video/upload/v1749697789/Happy_Birthday_Beautiful_-_Pentatonix_zlu8id.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </html> 
