--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         }
         .play-button {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             padding: 15px 30px;
             font-size: 18px;
             background-color: #ff69b4;
@@ -32,7 +33,7 @@
             transition: transform 0.2s, background-color 0.2s;
         }
         .play-button:hover {
-            transform: scale(1.05);
+            transform: translate(-50%, -50%) scale(1.05);
             background-color: #ff1493;
         }
         #backgroundMusic {
